Fix alignment issues

--- a/style/index.css
+++ b/style/index.css
@@ -161,7 +161,7 @@ p {
 
 #db-logo {
     width: 150px;
-    margin-right: 65px;
+    margin-right: 75px;
     margin-left: 80px;
 }
 
